--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -238,6 +238,11 @@ details {
     background-color: rgba(255, 255, 255, 0.8);
 }
 
+::-webkit-scrollbar-track {
+    margin-top: 70px;
+    margin-bottom: 10px;
+}
+
 .link-text {
     max-width: 100%;
 
